Made the liquid surface line waggle on whitewater.

--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -29,9 +29,10 @@ properties: {
 	water_color: "[int] :: [70, 0, 70, 50]", //Water no longer takes a color, since it uses a shader now. This has no effect.
 	add_water_effect: "commands :: add_water(_x_bound, _y_bound, _x2_bound, _y2_bound, water_color)",
 	add_particle_effect: "commands :: []",
+	surface_type: "string :: 'surface_still'",
 	liquid_surface: { //The surface wobbles around relative to the water because the surface is on the pixel grid, but the water renders in screen space which is *not* on the pixel grid.
 		type: "custom_obj", //liquid.surface does not exist yet?
-		init: "object('${me.type}.surface', x,y, {
+		init: "object('${me.type}.${me.surface_type}', x,y, {
 			parent: me,
 			zorder: lib.zorder.get('water_surface'), //Place surface line over water effect, as it may be opaque.
 		})",
@@ -104,8 +105,8 @@ on_editor_added: "add_water_effect",
 
 on_end_anim: "animation('normal')",
 
-object_type: [{
-	id: "surface",
+object_type: [{ //This object must remain first in the object_type list because whitewater controller derives from it that way. I can't figure out how to propery do it via a prototype, which complains it can't find liquid.surface if I try that, but also complains I can't have two of the same-named object if I don't.
+	id: "surface_still",
 	is_strict: true,
 	serializable: false,
 	zorder: "@include data/zorder.cfg:water",
