--- a/data/objects/effects/liquids/whitewater_controller.cfg
+++ b/data/objects/effects/liquids/whitewater_controller.cfg
@@ -6,6 +6,7 @@ zorder: "@include data/zorder.cfg:in_front_of_everything",
 properties: {
 	liquid_texture: "string :: 'liquids/whitewater-overlay.png'",
 	liquid_damage: "kill_anything",
+	surface_type: "string :: 'surface_wavy'",
 	
 	add_water_effect: "add_water(_x_bound, _y_bound, _x2_bound, _y2_bound, [140,00,0,70])",
 	
@@ -275,7 +276,7 @@ object_type: [
 			
 			do_setup: "[
 				set(x, _parent_obj._x_bound),
-				set(y, _parent_obj._y_bound - 20),
+				set(y, _parent_obj._y_bound - 18), //Final numeric offset sets the bottom of the surface of the water on the top of the water body. (-20 for top of the water body surface line, but in this case it wiggles around.)
 				set(draw_area, [
 					5.0*sin(_offset), 
 					0, 
@@ -303,6 +304,43 @@ object_type: [
 			w: 128,
 			y: 0,
 			h: 16,
+		},
+	},
+
+	{
+		"@merge": "@include data/object_prototypes/general/liquid.cfg:object_type[0]",
+		id: "surface_wavy",
+		on_done_create: "set(uv_segments, [img_w/6, 1])",
+		on_process: "fire_event('create')", //TODO: Remove this, it's just for testing to fix live_reload.
+		
+		shader: {
+			name: "waves",
+			vertex: "
+				uniform mat4 u_anura_mvp_matrix;
+				attribute vec4 a_anura_vertex;
+				attribute vec2 a_anura_texcoord;
+				varying vec2 v_texcoord;
+				uniform float u_anura_cycle;
+				void main() {
+					float offset = (
+						+ sin(+u_anura_cycle/4.1 + a_anura_vertex[0]*1.0)*0.5  //loose wave travelling normally right
+						+ sin(+u_anura_cycle/5.5 + a_anura_vertex[0]*1.2)*0.75 //tight wave travelling slowly left
+						+ sin(-u_anura_cycle/1.7 + a_anura_vertex[0]*1.4)*0.75 //tight wave travelling quickly right
+						+ sin(-u_anura_cycle/7.0 + a_anura_vertex[0]*2.1)*1.0  //flat wave travelling glacially left
+						+ sin(-u_anura_cycle/0.5 + a_anura_vertex[0]*1.5)*0.5  //very small fast waves travelling right
+					)/200; //amplitude
+					gl_Position = u_anura_mvp_matrix * a_anura_vertex + vec4(0, offset, 0, 0);
+					v_texcoord = a_anura_texcoord;
+				}
+			",
+
+			fragment: "
+				uniform sampler2D u_tex_map;
+				varying vec2 v_texcoord;
+				void main() {
+					gl_FragColor = texture2D(u_tex_map, v_texcoord); //[r,g,b,a], 0..1
+				}
+			",
 		},
 	},
 
