--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -279,12 +279,11 @@
 							+ texture2D(u_whitewater_texture, +loc/1.33 + vec2(u_anura_cycle * -1.1 * u_water_tex_speed[water_type], 0.50 + 0.004 * sin(u_anura_cycle / 2.5) + 0.004 * sin(u_anura_cycle / 1.5)  ))
 							+ texture2D(u_whitewater_texture, -loc/1.66 + vec2(u_anura_cycle * -2.0 * u_water_tex_speed[water_type], 0.75 + 0.006 * sin(u_anura_cycle / 2.5)  ))
 						)/4;
-
 						
-				}else {
+				} else {
 					//No water found, just shade grey and abort *if* we get here.
-						gl_FragColor = vec4(0.5,0.5,0.5,1);
-						return;
+					gl_FragColor = vec4(.3,.4,.5,1); //#4c667fff, make this findable by colour picker... hopefully.
+					return;
 				}
 				
 				
@@ -295,6 +294,7 @@
 				*/
 				float fb_grayscale = (fb_color[0] + fb_color[1] + fb_color[2])/3.0;
 
+				//Populate array like this instead of using a literal because that's not supported on Macs.
 				float blur_coefficients[33];
 
 				blur_coefficients[0] =  0.000000000232830643653869;
