--- a/data/objects/effects/liquids/whitewater_controller.cfg
+++ b/data/objects/effects/liquids/whitewater_controller.cfg
@@ -76,6 +76,8 @@ properties: {
 
 	setup_particles: "[
 		set(volume_bubbles.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
+		set(water_churn.clip_area,    [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
+		
 		set(volume_bubbles.particles, (
 			raw_particle_system_info + {
 				position: [
@@ -106,12 +108,12 @@ properties: {
 					where average_vertical_bubble_speed = 0.7 //as experimentally verified
 		)),
 
-
+		
 		set(water_churn.particles, (
 			raw_particle_system_info + {
 				position: [
 					(_x_bound + _x2_bound)/2 - mid_x, //Horizontal offset of particle system as wide as the water, to handle when the emitter object isn't square within the bounds of the water.
-					-(_y_bound - mid_y + 60), //Position the center point (of the box emitter) at the top of the body of water. Less 4px to float on top of water surface.
+					-(_y_bound - mid_y), //Position the center point (of the box emitter) at the top of the body of water. Less 4px to float on top of water surface.
 					0
 				],
 				emitter: (map <- raw_particle_system_info.emitter) + {
@@ -127,22 +129,27 @@ properties: {
 		)),
 
 
-
-		set(particle_systems['fizz'].min_x, _x_bound - x),
-		set(particle_systems['fizz'].max_x, _x2_bound - x),
-		set(particle_systems['fizz'].min_y, (_y_bound - 15) - y),
-		set(particle_systems['fizz'].max_y, (_y_bound + 60) - y),
-		set(particle_systems['fizz'].spawn_rate, 4*(_x2_bound - _x_bound)),
-		set(particle_systems['splash'].min_x, _x_bound - x),
-		set(particle_systems['splash'].max_x, _x2_bound - 54 - x),
-		set(particle_systems['splash'].min_y, (_y_bound + 6) - y),
-		set(particle_systems['splash'].max_y, (_y_bound + 6) - y),
-		set(particle_systems['splash'].spawn_rate, 1*(_x2_bound - _x_bound)),
-		set(particle_systems['splash_droplets'].pos_x, _x_bound - x),
-		set(particle_systems['splash_droplets'].pos_x_rand, _x2_bound - x),
-		set(particle_systems['splash_droplets'].pos_y, (_y_bound) - y),
-		set(particle_systems['splash_droplets'].pos_y_rand, (_y_bound) - y),
-		set(particle_systems['splash_droplets'].generation_rate, 10*(_x2_bound - _x_bound))
+		if(particle_systems['fizz'], [
+			set(particle_systems['fizz'].min_x, _x_bound - x),
+			set(particle_systems['fizz'].max_x, _x2_bound - x),
+			set(particle_systems['fizz'].min_y, (_y_bound - 15) - y),
+			set(particle_systems['fizz'].max_y, (_y_bound + 60) - y),
+			set(particle_systems['fizz'].spawn_rate, 4*(_x2_bound - _x_bound)),
+		]),
+		if(particle_systems['splash'], [
+			set(particle_systems['splash'].min_x, _x_bound - x),
+			set(particle_systems['splash'].max_x, _x2_bound - 54 - x),
+			set(particle_systems['splash'].min_y, (_y_bound + 6) - y),
+			set(particle_systems['splash'].max_y, (_y_bound + 6) - y),
+			set(particle_systems['splash'].spawn_rate, 1*(_x2_bound - _x_bound)),
+		]),
+		if(particle_systems['splash_droplets'], [
+			set(particle_systems['splash_droplets'].pos_x, _x_bound - x),
+			set(particle_systems['splash_droplets'].pos_x_rand, _x2_bound - x),
+			set(particle_systems['splash_droplets'].pos_y, (_y_bound) - y),
+			set(particle_systems['splash_droplets'].pos_y_rand, (_y_bound) - y),
+			set(particle_systems['splash_droplets'].generation_rate, 10*(_x2_bound - _x_bound))
+		]),
 	]",
 
 },
