Removed development deopt, lightened a whitewater shader on low end systems.

--- a/data/objects/effects/liquids/whitewater_controller.cfg
+++ b/data/objects/effects/liquids/whitewater_controller.cfg
@@ -317,8 +317,8 @@ object_type: [
 	{
 		"@merge": "@include data/object_prototypes/general/liquid.cfg:object_type[0]",
 		id: "surface_wavy",
-		on_done_create: "set(uv_segments, [img_w/6, 1])",
-		on_process: "fire_event('create')", //TODO: Remove this, it's just for testing to fix live_reload.
+		on_done_create: "set(uv_segments, [img_w/if(LOW_END_SYSTEM, 18, 6), 1])",
+		//on_process: "fire_event('create')", //TODO: Remove this, it's just for testing to fix live_reload.
 		
 		shader: {
 			name: "waves",
