--- a/data/objects/effects/liquids/whitewater_controller.cfg
+++ b/data/objects/effects/liquids/whitewater_controller.cfg
@@ -300,6 +300,40 @@ object_type: [
 		#-------------------------- vars --------------------------#
 			_offset: { type: "decimal", default: 0, persistent: false },
 		},
+		
+		shader: {
+			name: "waves",
+			vertex: "
+				uniform mat4 u_anura_mvp_matrix;
+				attribute vec4 a_anura_vertex;
+				attribute vec2 a_anura_texcoord;
+				varying vec2 v_texcoord;
+				void main() {
+					gl_Position = u_anura_mvp_matrix * a_anura_vertex;
+					v_texcoord = a_anura_texcoord;
+				}
+			",
+			
+			fragment: "
+				uniform sampler2D u_tex_map;
+				varying vec2 v_texcoord;
+				uniform float u_anura_cycle;
+				uniform vec4 u_anura_sprite_area;
+				void main() {
+					float offset = (
+						+ sin(+u_anura_cycle/4.1 + v_texcoord[0]*50*1.0)*0.5  //loose wave travelling normally right
+						+ sin(+u_anura_cycle/5.5 + v_texcoord[0]*50*1.2)*0.75 //tight wave travelling slowly left
+						+ sin(-u_anura_cycle/1.7 + v_texcoord[0]*50*1.4)*0.75 //tight wave travelling quickly right
+						+ sin(-u_anura_cycle/7.0 + v_texcoord[0]*50*2.1)*1.0  //flat wave travelling glacially left
+						+ sin(-u_anura_cycle/0.5 + v_texcoord[0]*50*1.5)*0.5  //very small fast waves travelling right
+					)/(u_anura_sprite_area[0]-u_anura_sprite_area[2])/20; //amplitude
+					
+					gl_FragColor = texture2D(u_tex_map, vec2(v_texcoord[0], clamp(v_texcoord[1] + (offset*(v_texcoord[1]*2-1)), .0, .999))); //[r,g,b,a], 0..1
+					//gl_FragColor = texture2D(u_tex_map, v_texcoord);
+					//gl_FragColor = vec4(v_texcoord[1],0,0,1);
+				}
+			",
+		},
 
 
 		#we don't want to compile the image since we rely on it tiling.
@@ -318,7 +352,7 @@ object_type: [
 		"@merge": "@include data/object_prototypes/general/liquid.cfg:object_type[0]",
 		id: "surface_wavy",
 		on_done_create: "set(uv_segments, [img_w/if(LOW_END_SYSTEM, 18, 6), 1])",
-		//on_process: "fire_event('create')", //TODO: Remove this, it's just for testing to fix live_reload.
+		//on_process: "[debug('reloading'), fire_event('create')]", //TODO: Remove this, it's just for testing to fix live_reload.
 		
 		shader: {
 			name: "waves",
