Fixed the major problem where the mushroom boss was no longer showing its hp bar (a regression introduced when we stopped polling for new bosses, done for perf reasons).

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -23,35 +23,7 @@ properties: {
 		]",
 
 
-	#--------------------------  settings --------------------------#
-		attack_damage:  "if(_sprouted, kill_anything, 0)",
-		team:  			"if(_sprouted, 'evil', 'evil_harmless')",
-	
-		title: "~Mushroom Boss~",
-		description: "~The heart of the corruption in the forest. Like many mushrooms, these are actually all one organism, joined together by underground tendrils. They must spread a chillingly long way...~",
-		taste: "~Of dust and death and mycological chemicals!~",
-
-		max_shots: "if(higher_difficulty, 3, 1)",
-		should_shoot_homing_shot: "(size(filter(level.chars, value.type = 'mushroom_boss.big_shot')) <= max_shots)",
-
-		max_babies: "if(higher_difficulty, 8, 4)",
-		should_spawn_baby_mushroom: "(size(filter(level.chars, value.type = 'mushroom_jellyfish')) <= max_babies)",
-
-		begin_chargeup: "execute(me, animation('chargeup') )",
-		begin_idle: "execute(me, [animation('normal')])",
-		begin_attack_homing: "execute(me, [if(should_shoot_homing_shot,animation('attack_homing'),begin_idle)])",
-		begin_attack_spawn: "execute(me, [if(should_spawn_baby_mushroom,animation('attack_spawn'),begin_idle)])",
-		begin_attack_stream: "execute(me, animation('attack_stream'))",
-		begin_guard: "execute(me, [animation('enter_guard'),set(_guard_counter,3)])",
-		set_behavior: "def(string choice) -> commands execute(me, [switch(choice,
-						'chargeup', begin_chargeup,
-						'attack_spawn', [begin_idle, schedule(1d100,begin_attack_spawn)],
-						'attack_homing', [begin_idle, schedule(1d100,begin_attack_homing)],
-						'attack_stream', [begin_idle, schedule(1d100,begin_attack_stream)],
-						'guard', begin_guard,
-			), set(me.behavior, choice)])",
-		
-		controller_obj: "(obj mushroom_boss.controller <- filter(level.chars, value.type = 'mushroom_boss.controller')[0])",
+	#--------------------------  hittable overrrides/settings --------------------------#
 	
 		taxonomy: "TaxonomyType :: enum mushroom",
 		custom_damage_table: "{
@@ -67,19 +39,64 @@ properties: {
 	
 	
 		death_fx_type: "'mushroom-boss'",
+	
 		corpse_object_type: "'${me.type}.corpse'",
+
+
+		attack_damage:  "if(_sprouted, kill_anything, 0)",
+		team:  			"if(_sprouted, 'evil', 'evil_harmless')",
+	
+		title: "~Mushroom Boss~",
+		description: "~The heart of the corruption in the forest. Like many mushrooms, these are actually all one organism, joined together by underground tendrils. They must spread a chillingly long way...~",
+		taste: "~Of dust and death and mycological chemicals!~",
+
+
+	#--------------------------  special logic that lets the controller handle getting hit --------------------------#
+		
 		get_hit_by: "def(obj hittable collide_with) -> commands [
 			if(not me.is_invincible and final_damage_amount(collide_with, collide_with.attack_damage) > 0, 
 				[controller_obj.get_hit_by(collide_with), display_hurt_visuals(collide_with, collide_with.attack_damage)],
 				[display_hurt_visuals(collide_with, 0)]
 			),
 		]",
+
+		controller_obj: "(obj mushroom_boss.controller <- filter(level.chars, value.type = 'mushroom_boss.controller')[0])",
 									
 		is_invincible: "bool :: ((not me.animation = 'chargeup') or proto_conds) where proto_conds = (bool(invincible) or level.in_dialog or is_invincible_posthit)",
 
 		play_object_specific_pain_vocalization: "def(DamageType damage_type, damage_amount) -> commands if(damage_amount > 0, sound('mushroom-boss-hurt.wav'), sound('mushroom-boss-resist.wav'))",
 									
 		set_draw_size: "def(decimal _scale) -> commands set(custom_draw, [0.0,1.0,2.0,3.0, [160-160*_scale,320-320*_scale],[-160+160*_scale,320-320*_scale],[-160+160*_scale,0],[160-160*_scale,0]])",
+
+
+	#--------------------------  custom combat logic --------------------------#
+
+		max_shots: "if(higher_difficulty, 3, 1)",
+		should_shoot_homing_shot: "(size(filter(level.chars, value.type = 'mushroom_boss.big_shot')) <= max_shots)",
+
+		max_babies: "if(higher_difficulty, 8, 4)",
+		should_spawn_baby_mushroom: "(size(filter(level.chars, value.type = 'mushroom_jellyfish')) <= max_babies)",
+
+		begin_chargeup: "execute(me, animation('chargeup') )",
+		begin_idle: "execute(me, [animation('normal')])",
+		begin_attack_homing: "execute(me, [if(should_shoot_homing_shot,animation('attack_homing'),begin_idle)])",
+		begin_attack_spawn: "execute(me, [if(should_spawn_baby_mushroom,animation('attack_spawn'),begin_idle)])",
+		begin_attack_stream: "execute(me, animation('attack_stream'))",
+		begin_guard: "execute(me, [animation('enter_guard'),set(_guard_counter,3)])",
+
+
+
+		set_behavior: "def(string choice) -> commands execute(me, [switch(choice,
+						'chargeup', begin_chargeup,
+						'attack_spawn', [begin_idle, schedule(1d100,begin_attack_spawn)],
+						'attack_homing', [begin_idle, schedule(1d100,begin_attack_homing)],
+						'attack_stream', [begin_idle, schedule(1d100,begin_attack_stream)],
+						'guard', begin_guard,
+			), set(me.behavior, choice)])",
+		
+
+		
+
 
 	#--------------------------  vars --------------------------#
 		behavior: { type: "string", default: "", persistent: false },
@@ -99,7 +116,12 @@ properties: {
 	on_end_sprout_anim: "null",
 	on_end_exit_sprout_anim: "animation('normal')",
 
-	on_shoot: "[sound_falloff('mushroom-boss-shot'+1d2+'.wav',500),sound_falloff('mushroom-boss-spore-shot'+1d3+'.wav'),sound_falloff('squishy-shot'+1d5+'.wav'),spawn(type+'.big_shot', mid_x, y, 1, set(child.velocity_y, -500 - 1d400))]",
+	on_shoot: "[
+		sound_falloff('mushroom-boss-shot'+1d2+'.wav',500),
+		sound_falloff('mushroom-boss-spore-shot'+1d3+'.wav'),
+		sound_falloff('squishy-shot'+1d5+'.wav'),
+		spawn(type+'.big_shot', mid_x, y, 1, set(child.velocity_y, -500 - 1d400)),
+	]",
 
 	on_spawn_baby: "[
 			sound('Jellyfish-Spawn'+1d2+'.wav'),
@@ -272,18 +294,28 @@ object_type: [ {
 		team: "'evil'",
 
 
-		on_begin_fight: "if(not _fight_started,[
-							set(me.is_a_boss, true),
-							[set(value.alpha, 255) | value <- level.chars, value.type = 'forest_blockage1'],
-							set_solid(-704, -192, -576, -32, true),
-							set_solid(2304, -320, 2496, -192, true),
+		on_begin_fight: "if(not _fight_started, [
+							[
+								[set(value.alpha, 255) | value <- level.chars, value.type = 'forest_blockage1'],
+								set_solid(-704, -192, -576, -32, true),
+								set_solid(2304, -320, 2496, -192, true),
 							
-							title('FIGHT!',200),
-							lib.audio.play_music(me,'MushroomBossIntro.ogg'),
-							set(_fight_started, true),
+								title('FIGHT!',200),
+								lib.audio.play_music(me,'MushroomBossIntro.ogg'),
+								set(_fight_started, true),
 							
-							sched_next_phase,
-							map(stalks, fire_event(value,'sprout'))])",
+								sched_next_phase,
+								map(stalks, fire_event(value,'sprout'))
+							],
+							[
+								set(me.is_a_boss, true)
+								;
+								me.constructor
+								/*
+									Specifically fire the constructor here after setting `is_a_boss`.  For perf reasons, we stopped polling the level to see if there are new bosses.  Rather, we just poll the current ones that are registered to see if they've died.  Objects register themselves as bosses as they're constructed, because 99% of the time they're not resident on the level until the fight starts.
+								*/
+							]
+						])",
 		
 		on_postfight_outro: "schedule(500,[	set(hitpoints,1),
 								set(invincible, -1),
