Finally fixed an alignment issue on an attache that, once again, was being cause by our lack of no_remove_alpha_borders.  Slightly better fx for the energy barriers dying.

--- a/data/objects/effects/attaches/bouncing_debris_chunk.cfg
+++ b/data/objects/effects/attaches/bouncing_debris_chunk.cfg
@@ -5,7 +5,7 @@ dies_on_inactive: true,
 solid_dimensions: ["effects"],
 friction: 2000,
 has_feet: false,
-solid_area: [9,9,10,10],
+solid_area: [9,9,11,11],
 prototype: ["transient_object"],
 
 #-------------------------- physics --------------------------#
@@ -149,7 +149,10 @@ properties: {
 				)",
 				
 	special_type_based_setup: "commands :: switch(debris_type,
-							enum electric_mote,				spawn('bouncing_debris_chunk.electric_sparks', x, y, {parent: me, relative_x:0, relative_y:0, time_to_die: 0}),
+							enum electric_mote,				[
+																spawn('bouncing_debris_chunk.electric_sparks', x, y, {parent: me, relative_x:0, relative_y:0, time_to_die: 0}),
+																schedule(100 + 1d100, do_settle), 
+															],
 							enum arcane_shard_small1,		set(alpha, 100),
 							enum arcane_shard_small2,		set(alpha, 100),
 							enum arcane_shard_big1,			set(alpha, 100),
@@ -167,6 +170,7 @@ animation: [
 		palettes: "@include data/palettes.cfg:dungeon_palettes + cave_palettes",
 		duration: 5,
 		frames: 7,
+		no_remove_alpha_borders: true,
 	},
 
 	{
@@ -237,8 +241,8 @@ animation: [
 	{
 		image: "effects/electric-sparks2.png",
 		id: "electric_mote",
-		accel_y: 10,
-		solid_area: [6,4,7,5],
+		accel_y: 0,
+		solid_area: [6,6,8,8],
 		rect: [2,2,16,16],
 		frames: 18,
 		frames_per_row: 9,
@@ -256,8 +260,8 @@ animation: [
 	{
 		image: "effects/electric-sparks2.png",
 		id: "electric_mote",
-		accel_y: 10,
-		solid_area: [6,4,7,5],
+		accel_y: -5,
+		solid_area: [6,6,8,8],
 		rect: [2,2,16,16],
 		frames: 18,
 		frames_per_row: 9,
@@ -266,8 +270,8 @@ animation: [
 	{
 		image: "effects/electric-sparks2.png",
 		id: "electric_mote",
-		accel_y: 10,
-		solid_area: [6,4,7,5],
+		accel_y: 5,
+		solid_area: [6,6,8,8],
 		rect: [2,2,16,16],
 		frames: 18,
 		frames_per_row: 9,
@@ -310,7 +314,6 @@ object_type: [
 		properties: {
 		},
 		
-		on_create: "[set(relative_x,0),set(relative_y,0)]",
 
 
 		on_end_anim: "[
@@ -322,8 +325,8 @@ object_type: [
 		animation: [
 			{
 				"@base": true,
+				no_remove_alpha_borders: true,
 				image: "effects/electric-sparks2.png",
-				accel_y: 10,
 				pad: 3,
 				body_area: null,
 				duration: 2,
