--- a/data/object_prototypes/base/cosmetic_effects.cfg
+++ b/data/object_prototypes/base/cosmetic_effects.cfg
@@ -231,8 +231,9 @@
 
 						/*large versions of the same, currently used for associated blocks, but potentially used for enemies*/
 					'energy_large', 	[
-											repeat_fx('die_cloud_electric_medium',1d2+5,4,20,30, null),
-											repeat_fx('electric_spark1',3+1d3,1,60,60,null),
+											repeat_fx('explosion_energy_big',1d2+5,4,25,35, null),
+											repeat_fx('mote_energy_small',3+1d3,1,60,60,null),
+											repeat_fx('mote_energy_small_2',3+1d3,1,60,60,null),
 											sound('death-fire'+1d5+'.wav'),
 											spawn_gibs(enum electric_mote,4d3 + 1),
 										],
