Made all of our death effect sounds use the falloff code so they get that nice stereo-separation effect.

--- a/data/object_prototypes/base/cosmetic_effects.cfg
+++ b/data/object_prototypes/base/cosmetic_effects.cfg
@@ -66,16 +66,16 @@
 	play_hurt_sounds: "def(DamageType damage_type, decimal damage_amount, TaxonomyType my_taxonomy) -> commands [if(play_object_specific_hurt_sounds(damage_type, damage_amount) != null, play_object_specific_hurt_sounds(damage_type, damage_amount),
 								if(damage_amount > 0,
 									switch(damage_type,
-										enum bite, sound('hurt-bite.wav'),
-										enum stab, sound('hurt-stab'+1d2+'.wav'),
-										enum slash, sound('hurt-slash'+1d3+'.wav'),
-										enum organic_bludgeon, sound('hurt-organic-bludgeon.wav'),
+										enum bite, sound_falloff('hurt-bite.wav'),
+										enum stab, sound_falloff('hurt-stab'+1d2+'.wav'),
+										enum slash, sound_falloff('hurt-slash'+1d3+'.wav'),
+										enum organic_bludgeon, sound_falloff('hurt-organic-bludgeon.wav'),
 										enum neutral, null,
-										enum impale, sound('Death-Spikes.wav'),
-										enum electricity, sound('hurt-electricity.wav', 0.5)
+										enum impale, sound_falloff('Death-Spikes.wav'),
+										enum electricity, sound_falloff('hurt-electricity.wav', 200, 0.5)
 									),
 									switch(my_taxonomy,
-										enum plant, sound('resist-plant.wav'),
+										enum plant, sound_falloff('resist-plant.wav'),
 										enum neutral, null
 									),
 								)),
@@ -112,19 +112,19 @@
 						/*these are a set of effects based on the type of creature dying*/
 					'bug',				[
 											vfx('die_cloud_puffy'),
-											sound('death-crunch'+1d2+'.wav'),
+											sound_falloff('death-crunch'+1d2+'.wav'),
 										],
 					'mushroom',			[
 											vfx('die_cloud_evaporative'),
-											sound('death-crunch'+1d2+'.wav')
+											sound_falloff('death-crunch'+1d2+'.wav')
 										],
 					'plant',			[
 											vfx('die_cloud_evaporative'),
-											sound('Death-Plant-Short'+1d5+'.wav'),
+											sound_falloff('Death-Plant-Short'+1d5+'.wav'),
 										],
 					'animal',			[
 											vfx('die_cloud'),
-											sound('death-crunch'+1d2+'.wav'),
+											sound_falloff('death-crunch'+1d2+'.wav'),
 											spawn_gibs(enum bone_straight,1d2),
 											spawn_gibs(enum bone_skull,1),
 										],
@@ -134,28 +134,28 @@
 												[
 													repeat_fx('die_cloud',5,10,50,70, null),
 													repeat_fx('feathers_falling',15,1,50,70, null),
-													sound('death-crunch'+1d2+'.wav'),
+													sound_falloff('death-crunch'+1d2+'.wav'),
 													spawn_gibs(enum bone_straight,2d3),
 													spawn_gibs(enum bone_skull,1),
 												],
 												[
 													repeat_fx('feathers_falling',5,1,20,30, null),
-													sound('death-crunch'+1d2+'.wav'),
+													sound_falloff('death-crunch'+1d2+'.wav'),
 													spawn_gibs(enum bone_straight,1d2),
 													spawn_gibs(enum bone_skull,1),
 												]
 											)											
 										],
 					'milgramen',		if(victim_size = enum big,
-											repeat_fx('die_cloud',10,5,50,70, sound('Milgramen-Explode'+1d5+'.wav')),
+											repeat_fx('die_cloud',10,5,50,70, sound_falloff('Milgramen-Explode'+1d5+'.wav')),
 											if(victim_size = enum small,
 												[
 													repeat_fx('die_cloud_medium',5,4,20,30, null),
-													sound('milgram-pod-death1.wav')
+													sound_falloff('milgram-pod-death1.wav')
 												],
 												[
 													vfx('die_cloud'),
-													sound('Milgramen-Explode'+1d5+'.wav'),
+													sound_falloff('Milgramen-Explode'+1d5+'.wav'),
 												]
 											)
 										),
@@ -164,37 +164,37 @@
 					 								
 						/*material-based types - used on both enemies and throwable probs */
 					'stone',			[
-											sound('blockbreak.ogg'),
+											sound_falloff('blockbreak.ogg'),
 											repeat_fx('die_cloud_medium',5,4,20,30, null),
 											spawn_gibs(enum rock_small_cement,5+1d3),
 											spawn_gibs(enum rock_big_cement,2d3),
 										],
 					'stone_large',		[
-											sound('blockbreak.ogg'),
+											sound_falloff('blockbreak.ogg'),
 											repeat_fx('die_cloud',5,10,50,70, null),
 											spawn_gibs(enum rock_small_cement,3d2,30),
 											spawn_gibs(enum rock_big_cement,3d3,30),
 										],
 					'metal',			[
-											sound('blockbreak.ogg'),
+											sound_falloff('blockbreak.ogg'),
 											repeat_fx('die_cloud_medium',5,4,20,30, null),
 											spawn_gibs(enum metal_corner,1d2),
 											spawn_gibs(enum metal_flat,1d2),
 										],
 					'wood',				[
-											sound('blockbreak.ogg'),
+											sound_falloff('blockbreak.ogg'),
 											repeat_fx('die_cloud_medium',5,4,20,30, null),
 											spawn_gibs(enum wooden_corner,1d2),
 											spawn_gibs(enum wooden_flat,1d2),
 										],
 					'porcelain',		[
-											sound('vase-smash1.wav'),
+											sound_falloff('vase-smash1.wav'),
 											repeat_fx('die_cloud_medium',5,4,20,30, null),
 											spawn_gibs(enum porcelain_small,2d3),
 											spawn_gibs(enum porcelain,2d2 + 1),
 										],
 					'peat_burn_large',	[
-											sound('blockbreak.ogg'),
+											sound_falloff('blockbreak.ogg'),
 											repeat_fx('die_cloud_medium',5,4,20,30, null),
 											spawn_gibs(enum peat_small,2d3),
 											spawn_gibs(enum peat, 2d2 + 1),
@@ -205,28 +205,28 @@
 						/*a set of effects based on the damage source; elsewhere in hittable these actually overrule the creature-type*/
 					'fire',				if(victim_size = enum big,
 											[
-												sound('death-fire-large.wav'),
+												sound_falloff('death-fire-large.wav'),
 												repeat_fx('die_cloud_fire',5,4,30,30, null),
 											],
 											[
 												vfx('die_cloud_fire'),
-												sound('death-fire'+1d5+'.wav'),
+												sound_falloff('death-fire'+1d5+'.wav'),
 											]
 										),
 					'acid',				if(victim_size = enum big,
 											[
 												repeat_fx('explosion_acid_big',10,5,50,50,null),
-												sound('death-acid-bubbly.wav'),
+												sound_falloff('death-acid-bubbly.wav'),
 											],
 											[
 												repeat_fx('die_cloud_acid_small',10,6,30,30,null),
-												sound('death-acid-bubbly.wav'),
+												sound_falloff('death-acid-bubbly.wav'),
 											]
 										),
 					'energy',			[
 											repeat_fx('die_cloud_electric_medium',1d2+5,4,20,30, null),
 											repeat_fx('electric_spark1',3+1d3,1,60,60,null),
-											sound('death-fire'+1d5+'.wav')
+											sound_falloff('death-fire'+1d5+'.wav')
 										],
 
 						/*large versions of the same, currently used for associated blocks, but potentially used for enemies*/
@@ -234,13 +234,13 @@
 											repeat_fx('explosion_energy_big',1d2+5,4,25,35, null),
 											repeat_fx('mote_energy_small',3+1d3,1,60,60,null),
 											repeat_fx('mote_energy_small_2',3+1d3,1,60,60,null),
-											sound('death-fire'+1d5+'.wav'),
+											sound_falloff('death-fire'+1d5+'.wav'),
 											spawn_gibs(enum electric_mote,4d3 + 1),
 										],
 
 					'arcane_large',		[
 											repeat_fx('die_cloud_electric_medium',1d2+5,4,20,30, null),
-											repeat_fx('electric_spark1',3+1d3,1,60,60,null), sound('death-fire'+1d5+'.wav'), spawn_gibs(enum arcane_shard_small1,4d3 + 1),
+											repeat_fx('electric_spark1',3+1d3,1,60,60,null), sound_falloff('death-fire'+1d5+'.wav'), spawn_gibs(enum arcane_shard_small1,4d3 + 1),
 											spawn_gibs(enum arcane_shard_small2,4d3 + 1),
 											spawn_gibs(enum arcane_shard_big1,1d3 + 1),
 										],
@@ -249,7 +249,7 @@
 						/*generic recurring effects for miscellaneous things - often not actually enemies*/
 					'small',			repeat_fx('die_cloud_small',5,4,10,10, null),
 					'medium',			repeat_fx('die_cloud_medium',5,4,20,30, null),
-					'large',			repeat_fx('die_cloud',5,10,50,70, sound('splat.ogg')),
+					'large',			repeat_fx('die_cloud',5,10,50,70, sound_falloff('splat.ogg')),
 					
 					
 					
