Better effects for the energy barriers getting shattered.

--- a/data/object_prototypes/base/cosmetic_effects.cfg
+++ b/data/object_prototypes/base/cosmetic_effects.cfg
@@ -265,7 +265,19 @@
 			where vfx_spread = def(string obj_type, int spread_x, int spread_y) -> commands spawn(obj_type, me.mid_x + 1d(spread_x) - 1d(spread_x), me.mid_y  + 1d(spread_y) - 1d(spread_y), if(1d2=2,-1,1))
 		))",
 	
-	spawn_gibs: "def(DebrisType variation_type, int count, spread=10) -> commands map(range(count), spawn('bouncing_debris_chunk',x+1d(spread), y+1d(spread), {facing: if(1d2=2,1,-1), debris_type: variation_type, init_vel: enum burst}))",
+	spawn_gibs: "def(DebrisType variation_type, int count, spread=10) -> commands
+			map(range(count),
+				spawn(
+					'bouncing_debris_chunk',
+					x+1d(spread),
+					y+1d(spread),
+				{
+					facing: if(1d2=2,1,-1),
+					debris_type: variation_type,
+					init_vel: enum burst
+				})
+			 )
+		",
 
 
 	splash_effect: "def() -> commands if(me.underwater and me.water_bounds,
