--- a/data/objects/effects/attaches/bouncing_debris_chunk.cfg
+++ b/data/objects/effects/attaches/bouncing_debris_chunk.cfg
@@ -151,7 +151,9 @@ properties: {
 	special_type_based_setup: "commands :: switch(debris_type,
 							enum electric_mote,				[
 																spawn('bouncing_debris_chunk.electric_sparks', x, y, {parent: me, relative_x:0, relative_y:0, time_to_die: 0}),
-																schedule(100 + 1d100, do_settle), 
+																schedule(100 + 1d100, do_settle),
+																spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'energy_shot_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
+
 															],
 							enum arcane_shard_small1,		set(alpha, 100),
 							enum arcane_shard_small2,		set(alpha, 100),
