--- a/data/objects/effects/attaches/legacy_particle_attache.cfg
+++ b/data/objects/effects/attaches/legacy_particle_attache.cfg
@@ -113,6 +113,7 @@ properties: {
 		'prospera_spell_contrail': ['prospera_spell_contrail'],
 		'prospera_spell_aftermath': ['prospera_spell_aftermath'],
 		'fuse_sparks': ['fuse_sparks'],
+		'energy_shot_contrail': ['blue_energy_motes_small', 'electric_sparks'],
 	}",
 
 #-------------------------- vars for customization --------------------------#
@@ -843,6 +844,79 @@ particle_system: [
 			duration: 2,
 			pad: 4,
 		},
+	},
+	{
+		id: "blue_energy_motes",
+		type: "simple",
+		spawn_rate: 150,
+		time_to_live: 54,
+		min_x: -15,
+		max_x: 15,
+		min_y: -15,
+		max_y: 15,
+		velocity_y: -500,
+		velocity_x: -500,
+		velocity_x_random: 1000,
+		velocity_y_random: 1000,
+		animation: {
+			id: "sparkle",
+			image: "effects/particles5.png",
+			rect: [193,97,221,125],
+			frames: 9,
+			duration: 6,
+			pad: 3,
+		},
+	},
+	{
+		id: "blue_energy_motes_small",
+		type: "simple",
+		spawn_rate: 150,
+		time_to_live: 54,
+		min_x: -15,
+		max_x: 15,
+		min_y: -15,
+		max_y: 15,
+		velocity_y: -500,
+		velocity_x: -500,
+		velocity_x_random: 1000,
+		velocity_y_random: 1000,
+		animation: {
+			id: "sparkle",
+			image: "effects/particles5.png",
+			rect: [321,97,349,125],
+			frames: 5,
+			duration: 6,
+			pad: 3,
+		},
+	},
+	{
+		id: "electric_sparks",
+		type: "simple",
+		spawn_rate: 150,
+		time_to_live: 20,
+		min_x: -15,
+		max_x: 15,
+		min_y: -15,
+		max_y: 15,
+		velocity_y: -500,
+		velocity_x: -500,
+		velocity_x_random: 1000,
+		velocity_y_random: 1000,
+		animation: [{
+			id: "sparkle",
+			image: "effects/particles5.png",
+			rect: [257,65,285,93],
+			frames: 6,
+			duration: 4,
+			pad: 3,
+		},{
+			id: "sparkle",
+			image: "effects/particles5.png",
+			rect: [1,97,29,125],
+			frames: 6,
+			duration: 4,
+			pad: 3,
+		}],
 	},
 ],
 }
