Made new fx for the peat blocks getting burned up.  Set up the gibs that spawn when an object dies to actually get spawned by a utility object a frame later, so that they don't get 'evicted' from the solid area occupied by their creator.  It looks a lot better for them to spawn in the middle of it, but we still want them to occupy the same solid area, because we want them to 'settle' onto the top of blocks beneath them.

--- a/data/object_prototypes/base/cosmetic_effects.cfg
+++ b/data/object_prototypes/base/cosmetic_effects.cfg
@@ -194,8 +194,8 @@
 											spawn_gibs(enum porcelain,2d2 + 1),
 										],
 					'peat_burn_large',	[
-											sound_falloff('blockbreak.ogg'),
-											repeat_fx('die_cloud_medium',5,4,20,30, null),
+											sound_falloff('death-fire-large.wav'),
+											repeat_fx('die_cloud_fire',5,4,20,30, null),
 											spawn_gibs(enum peat_small,2d3),
 											spawn_gibs(enum peat, 2d2 + 1),
 										],
@@ -262,22 +262,31 @@
 			
 			
 			) where vfx = def(string obj_type) -> commands spawn(obj_type, me.mid_x, me.mid_y, if(1d2=2,-1,1)))
-			where vfx_spread = def(string obj_type, int spread_x, int spread_y) -> commands spawn(obj_type, me.mid_x + 1d(spread_x) - 1d(spread_x), me.mid_y  + 1d(spread_y) - 1d(spread_y), if(1d2=2,-1,1))
+			where vfx_spread = def(string obj_type, int spread_x, int spread_y) -> commands
+				spawn(
+					obj_type,
+					me.mid_x + 1d(spread_x) - 1d(spread_x),
+					me.mid_y  + 1d(spread_y) - 1d(spread_y),
+					if(1d2=2,-1,1)
+				)
 		))",
 	
-	spawn_gibs: "def(DebrisType variation_type, int count, spread=10) -> commands
-			map(range(count),
-				spawn(
-					'bouncing_debris_chunk',
-					x+1d(spread),
-					y+1d(spread),
-				{
-					facing: if(1d2=2,1,-1),
-					debris_type: variation_type,
-					init_vel: enum burst
-				})
-			 )
-		",
+	spawn_gibs: "def(DebrisType variation_type, int count, int spread=10) -> commands
+		spawn('particle_system_holder', me.mid_x, me.mid_y, if(1d2=2,-1,1),
+			execute(child, schedule(1,
+				map(range(count),
+					spawn(
+						'bouncing_debris_chunk',
+						mid_x - (spread/2) +1d(spread),
+						mid_y - (spread/2) +1d(spread),
+					{
+						facing: if(1d2=2,1,-1),
+						debris_type: variation_type,
+						init_vel: enum burst
+					})
+				 )
+			))
+		)",
 
 
 	splash_effect: "def() -> commands if(me.underwater and me.water_bounds,
