--- a/data/objects/effects/attaches/legacy_particle_attache.cfg
+++ b/data/objects/effects/attaches/legacy_particle_attache.cfg
@@ -114,6 +114,7 @@ properties: {
 		'prospera_spell_aftermath': ['prospera_spell_aftermath'],
 		'fuse_sparks': ['fuse_sparks'],
 		'energy_shot_contrail': ['blue_energy_motes_small', 'electric_sparks'],
+		'smoky_fire_shot_contrail': ['2_fire_med', '0_fire_smoke'],
 	}",
 
 #-------------------------- vars for customization --------------------------#
@@ -278,6 +279,36 @@ particle_system: [
 			duration: 4,
 		},
 	},
+	{
+		id: "0_fire_smoke",
+		type: "simple",
+		spawn_rate: 75,
+		time_to_live: 40,
+		min_x: -20,
+		max_x: 20,
+		min_y: -20,
+		max_y: 10,
+		velocity_y: -600,
+		velocity_x: 260,
+		velocity_x_random: 200,
+		velocity_y_random: 1000,
+		accel_y: -30,
+
+		animation: {
+			id: "sparkle",
+			image: "effects/explosion.png",
+			x: 198,
+			y: 5,
+			w: 17,
+			h: 16,
+			pad: 3,
+			frames: 8,
+			frames_per_row: 2,
+			scale: 2,
+			duration: 5,
+			accel_y: -10,
+		},
+	},	
 	{
 		id: "1_fire_bubbles_dark",
 		type: "simple",
