Hooked up some additional arcane particles for when the arcane blocks get shattered.

--- a/data/objects/effects/attaches/bouncing_debris_chunk.cfg
+++ b/data/objects/effects/attaches/bouncing_debris_chunk.cfg
@@ -157,9 +157,18 @@ properties: {
 							enum peat,						[
 																spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'smoky_fire_shot_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
 															],
-							enum arcane_shard_small1,		set(alpha, 100),
-							enum arcane_shard_small2,		set(alpha, 100),
-							enum arcane_shard_big1,			set(alpha, 100),
+							enum arcane_shard_small1,		[
+																spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'arcane_shot_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
+																set(alpha, 100),
+															],
+							enum arcane_shard_small2,		[
+																spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'arcane_shot_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
+																set(alpha, 100),
+															],
+							enum arcane_shard_big1,			[
+																spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'arcane_shot_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
+																set(alpha, 100),
+															],
 															null
 				)",
 },
