--- a/data/object_prototypes/base/cosmetic_effects.cfg
+++ b/data/object_prototypes/base/cosmetic_effects.cfg
@@ -239,7 +239,7 @@
 										],
 
 					'arcane_large',		[
-											repeat_fx('die_cloud_electric_medium',1d2+5,4,20,30, null),
+											repeat_fx('explosion_arcane_big',1d2+5,4,20,30, null),
 											repeat_fx('electric_spark1',3+1d3,1,60,60,null), sound_falloff('death-fire'+1d5+'.wav'), spawn_gibs(enum arcane_shard_small1,4d3 + 1),
 											spawn_gibs(enum arcane_shard_small2,4d3 + 1),
 											spawn_gibs(enum arcane_shard_big1,1d3 + 1),
