--- a/data/objects/effects/attaches/legacy_particle_attache.cfg
+++ b/data/objects/effects/attaches/legacy_particle_attache.cfg
@@ -114,6 +114,7 @@ properties: {
 		'prospera_spell_aftermath': ['prospera_spell_aftermath'],
 		'fuse_sparks': ['fuse_sparks'],
 		'energy_shot_contrail': ['blue_energy_motes_small', 'electric_sparks'],
+		'arcane_shot_contrail': ['arcane_motes_small'],
 		'smoky_fire_shot_contrail': ['2_fire_med', '0_fire_smoke'],
 	}",
 
@@ -919,6 +920,39 @@ particle_system: [
 			duration: 6,
 			pad: 3,
 		},
+	},
+	{
+		id: "arcane_motes_small",
+		type: "simple",
+		spawn_rate: 150,
+		time_to_live: 36,
+		min_x: -15,
+		max_x: 15,
+		min_y: -15,
+		max_y: 15,
+		velocity_y: -500,
+		velocity_x: -500,
+		velocity_x_random: 1000,
+		velocity_y_random: 1000,
+		animation: [{
+			no_remove_alpha_borders: true,
+			id: "normal",
+			image: "effects/particles5.png",
+			rect: [193,1,221,29], //light
+			frames: 9,
+			pad: 3,
+			duration: 4,
+			scale: 1,
+		},{
+			no_remove_alpha_borders: true,
+			id: "normal",
+			image: "effects/particles5.png",
+			rect: [1,33,29,61], //dark
+			frames: 9,
+			pad: 3,
+			duration: 4,
+			scale: 1,
+		}],
 	},
 	{
 		id: "electric_sparks",
