Set up a standardized way to make bouncing_debris_chunks of particular types, weightless.

--- a/data/objects/effects/attaches/bouncing_debris_chunk.cfg
+++ b/data/objects/effects/attaches/bouncing_debris_chunk.cfg
@@ -30,20 +30,31 @@ on_collide_side: "set(velocity_x, -(velocity_x*850)/1000)",
 #-------------------------- cosmetic behavior --------------------------#
 
 on_create: "[
-				animation(animation_for_material(debris_type)),
+				animation(animation_for_material(debris_type))
+				;
+				handle_weight_acceleration,
 				set(rotate, 1d4*90),
 				set_initial_velocity(init_vel),
 				special_type_based_setup
 			]",
+			
 timer_frequency: 5,
 on_timer: "if(not has_settled, add(rotate, 15))",
 
-on_end_anim: "animation(animation)",
+on_end_anim: "[
+	animation(animation)
+	;
+	handle_weight_acceleration
+]",
+
+
+
 on_enter_water: "do_settle",
 on_die: "[spawn('bouncing_debris_chunk.particle_system_holder', x,y, {particle_colors: particle_colors}), remove_object(me)]",
 
 
 on_process: "if(has_settled, set(time_in_animation, 0))",
+
 
 
 #-------------------------- core behavior --------------------------#
@@ -147,6 +158,20 @@ properties: {
 							enum arcane_shard_big1,			'arcane_shard_big1',
 															'rock_small_cement'
 				)",
+
+	is_weightless: "bool :: (debris_type in [
+									enum electric_mote,
+								])",
+
+	handle_weight_acceleration: "commands :: 
+		if(not is_weightless,
+			set(accel_y, 40),
+			[
+				set(accel_x, (4 - 1d7) * 3 /* make it granular */ * 20 /*and correct for the XY disparity*/),
+				set(accel_y, (4 - 1d7) * 3 /* make it granular */ ),
+			]	
+		)",
+
 				
 	special_type_based_setup: "commands :: switch(debris_type,
 							enum electric_mote,				[
@@ -254,7 +279,6 @@ animation: [
 	{
 		image: "effects/electric-sparks2.png",
 		id: "electric_mote",
-		accel_y: 0,
 		solid_area: [6,6,8,8],
 		rect: [2,2,16,16],
 		frames: 18,
@@ -273,7 +297,6 @@ animation: [
 	{
 		image: "effects/electric-sparks2.png",
 		id: "electric_mote",
-		accel_y: -5,
 		solid_area: [6,6,8,8],
 		rect: [2,2,16,16],
 		frames: 18,
@@ -283,7 +306,6 @@ animation: [
 	{
 		image: "effects/electric-sparks2.png",
 		id: "electric_mote",
-		accel_y: 5,
 		solid_area: [6,6,8,8],
 		rect: [2,2,16,16],
 		frames: 18,
