Made it so the energy and arcane block deaths both have chunks that fall on the ground, and parts that float in the air.

--- a/data/object_prototypes/base/cosmetic_effects.cfg
+++ b/data/object_prototypes/base/cosmetic_effects.cfg
@@ -234,15 +234,22 @@
 											repeat_fx('explosion_energy_big',1d2+5,4,25,35, null),
 											repeat_fx('mote_energy_small',3+1d3,1,60,60,null),
 											repeat_fx('mote_energy_small_2',3+1d3,1,60,60,null),
+											repeat_fx('electric_spark1',3+1d3,1,60,60,null),
 											sound_falloff('death-fire'+1d5+'.wav'),
-											spawn_gibs(enum electric_mote,4d3 + 1),
+											spawn_gibs(enum electric_mote, 4d3 + 1),
+											spawn_gibs(enum electric_shard_small1, 4d3 + 1),
+											spawn_gibs(enum electric_shard_small2, 4d3 + 1),
+											spawn_gibs(enum electric_shard_big1, 1d3 + 1),
 										],
 
 					'arcane_large',		[
 											repeat_fx('explosion_arcane_big',1d2+5,4,20,30, null),
-											repeat_fx('electric_spark1',3+1d3,1,60,60,null), sound_falloff('death-fire'+1d5+'.wav'), spawn_gibs(enum arcane_shard_small1,4d3 + 1),
-											spawn_gibs(enum arcane_shard_small2,4d3 + 1),
-											spawn_gibs(enum arcane_shard_big1,1d3 + 1),
+											repeat_fx('electric_spark1',3+1d3,1,60,60,null),
+											sound_falloff('death-fire'+1d5+'.wav'),
+											spawn_gibs(enum arcane_mote, 4d3 + 1),
+											spawn_gibs(enum arcane_shard_small1, 4d3 + 1),
+											spawn_gibs(enum arcane_shard_small2, 4d3 + 1),
+											spawn_gibs(enum arcane_shard_big1, 1d3 + 1),
 										],
 					
 					
