--- a/data/objects/effects/attaches/bouncing_debris_chunk.cfg
+++ b/data/objects/effects/attaches/bouncing_debris_chunk.cfg
@@ -3,6 +3,7 @@ id: "bouncing_debris_chunk",
 zorder: "@include data/zorder.cfg:near_player_foreground_effects",
 dies_on_inactive: true,
 solid_dimensions: ["effects"],
+traction_in_air: 1000,
 friction: 2000,
 has_feet: false,
 solid_area: [9,9,11,11],
@@ -111,6 +112,10 @@ properties: {
 							enum peat, 						enum bramble,
 							enum peat_small, 				enum bark,
 							enum electric_mote,				enum electric,
+							enum electric_shard_small1,		enum electric,
+							enum electric_shard_small2,		enum electric,
+							enum electric_shard_big1,		enum electric,
+							enum arcane_mote,				enum arcane,
 							enum arcane_shard_small1,		enum arcane,
 							enum arcane_shard_small2,		enum arcane,
 							enum arcane_shard_big1,			enum arcane,
@@ -153,6 +158,10 @@ properties: {
 							enum peat,						'peat',
 							enum peat_small,				'peat_small',
 							enum electric_mote,				'electric_mote',
+							enum electric_shard_small1,		'electric_shard_small1',
+							enum electric_shard_small2,		'electric_shard_small2',
+							enum electric_shard_big1,		'electric_shard_big1',
+							enum arcane_mote,				'arcane_mote',
 							enum arcane_shard_small1,		'arcane_shard_small1',
 							enum arcane_shard_small2,		'arcane_shard_small2',
 							enum arcane_shard_big1,			'arcane_shard_big1',
@@ -161,13 +170,14 @@ properties: {
 
 	is_weightless: "bool :: (debris_type in [
 									enum electric_mote,
+									enum arcane_mote,
 								])",
 
 	handle_weight_acceleration: "commands :: 
 		if(not is_weightless,
 			set(accel_y, 40),
 			[
-				set(accel_x, (4 - 1d7) * 3 /* make it granular */ * 20 /*and correct for the XY disparity*/),
+				set(accel_x, (4 - 1d7) * 3 /* make it granular */ * 1 /*and correct for the XY disparity*/),
 				set(accel_y, (4 - 1d7) * 3 /* make it granular */ ),
 			]	
 		)",
@@ -179,9 +189,29 @@ properties: {
 																schedule(100 + 1d100, do_settle),
 																spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'energy_shot_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
 															],
+							enum electric_shard_small1,		[
+																spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'energy_shot_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
+																set(alpha, 100),
+															],
+							enum electric_shard_small2,		[
+																spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'energy_shot_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
+																set(alpha, 100),
+															],
+							enum electric_shard_big1,			[
+																spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'energy_shot_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
+																set(alpha, 100),
+															],
+
 							enum peat,						[
 																spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'smoky_fire_shot_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
 															],
+															
+							enum arcane_mote,				[
+																spawn('bouncing_debris_chunk.electric_sparks', x, y, {parent: me, relative_x:0, relative_y:0, time_to_die: 0}),
+																schedule(100 + 1d100, do_settle),
+																spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'arcane_shot_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
+															],
+															
 							enum arcane_shard_small1,		[
 																spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'arcane_shot_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
 																set(alpha, 100),
@@ -277,15 +307,6 @@ animation: [
 		frames_per_row: 1,
 	},
 	{
-		image: "effects/electric-sparks2.png",
-		id: "electric_mote",
-		solid_area: [6,6,8,8],
-		rect: [2,2,16,16],
-		frames: 18,
-		frames_per_row: 9,
-		duration: 1,
-	},
-	{
 		id: "peat",
 		rect: [1,161,17,177],
 	},
@@ -293,6 +314,15 @@ animation: [
 		id: "peat_small",
 		rect: [1,181,17,197],
 		frames: 6,
+	},
+	{
+		image: "effects/electric-sparks2.png",
+		id: "electric_mote",
+		solid_area: [6,6,8,8],
+		rect: [2,2,16,16],
+		frames: 18,
+		frames_per_row: 9,
+		duration: 1,
 	},
 	{
 		image: "effects/electric-sparks2.png",
@@ -311,6 +341,36 @@ animation: [
 		frames: 18,
 		frames_per_row: 9,
 		duration: 3,
+	},
+	{
+		id: "electric_shard_small1",
+		rect: [1,354,17,370],
+		frames: 8,
+		duration: 3,
+	},
+	{
+		id: "electric_shard_small2",
+		rect: [1,376,17,392],
+		frames: 10,
+		duration: 3,
+	},
+	{
+		id: "electric_shard_big1",
+		rect: [1,398,21,418],
+		frames: 12,
+		frames_per_row: 6,
+		duration: 3,
+	},
+
+	{
+		id: "arcane_mote",
+		solid_area: [14,14,16,16],
+		image: "effects/particles5.png",
+		rect: [1,1,29,29],
+		frames: 6,
+		pad: 3,
+		duration: 4,
+		scale: 1,
 	},
 	{
 		id: "arcane_shard_small1",
