--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -334,6 +334,7 @@ object_type: [ {
 			]",
 
 
+		#-------------------------- hittable overrides --------------------------#
 			taxonomy: "TaxonomyType :: enum mushroom",
 			custom_damage_table: "{
 										enum neutral: 1.0,
@@ -347,11 +348,21 @@ object_type: [ {
 									}",
 
 			is_a_physical_gameplay_object: "false",
+
+			hurt_velocity_y: 0,
+			hurt_velocity_x: 0,
+
+		#-------------------------- helpers --------------------------#
+			mb_debug_active: "bool :: false",
+			mb_debug: "def(value) -> commands if(mb_debug_active, debug(value))",
+
 			
 		#--------------------------  vars --------------------------#
 			_has_died: { type: "bool", default: false, persistent: false },
 			_fight_started: { type: "bool", default: false, persistent: false },
+			_behavior_mode_prng:	{ type: "class pseudo_random_numbers", init: "construct('pseudo_random_numbers',{_size_of_pool:3, _pool_size_multiplier: 1})", persistent: false },
 
+			_state: { type: "MushroomBossBehaviorModeTypes", init: "enum idle", persistent: false },
 
 		#-------------------------- custom death logic --------------------------#
 			handle_death: "def(interface {damage_type: DamageType} collide_with) -> commands
@@ -360,33 +371,106 @@ object_type: [ {
 			
 			clear_dangerous_items: "[remove_object(value) | value <- level.chars, value.type in ['mushroom_boss.big_shot','mushroom_boss.stream_shot', 'mushroom_jellyfish']]",
 
-		#-------------------------- attack pattern handling --------------------------#
-			sched_next_phase: "schedule(standard_delay, fire_event('do_behavior_change'))",
-			standard_delay: "100+1d150",
-
+		#-------------------------- selectors for the heads/stalks --------------------------#
 			stalks: "[obj mushroom_boss] <- filter(level.chars, value.type = 'mushroom_boss')",
 
-			num_chargers: "def(int num_available_slots) -> int 1",  // <-- this is the vulnerable state
-			num_attackers_spawning: "def(int num_available_slots) -> int 1",
-			num_attackers_homing: "def(int num_available_slots) -> int 1d2-1",
-			num_attackers_stream: "def(int num_available_slots) -> int if(higher_difficulty, 1d(num_available_slots)-1, 1d2-1)",
-			num_idlers: "def(int num_available_slots) -> int num_available_slots",
+			/* 
+				As much as it might be 'elegant' to program the boss in a way that gracefully adapts to a fully arbitrary number of boss heads, it's kind of a pointless endeavor.  We're softly going to expect that there are 4 heads, and leave open the potential of things breaking if we change it later.  Some of these pieces of code will break down if i.e. there are less than two stalks.
+			*/
 			
-			make_chargers: "def([string] filled_slots) -> [string] filled_slots + ['chargeup']*num_chargers(size(stalks) - size(filled_slots))",
-			make_attackers_spawning: "def([string] filled_slots) -> [string] filled_slots + ['attack_spawn']*num_attackers_spawning(size(stalks) - size(filled_slots))",
-			make_attackers_homing: "def([string] filled_slots) -> [string] filled_slots + ['attack_homing']*num_attackers_homing(size(stalks) - size(filled_slots))",
-			make_attackers_stream: "def([string] filled_slots) -> [string] filled_slots + ['attack_stream']*num_attackers_stream(size(stalks) - size(filled_slots))",
-			make_idlers: "def([string] filled_slots) -> [string] filled_slots + ['guard']*num_idlers(size(stalks) - size(filled_slots))",
-			
-			behavior_profile: "[string] :: shuffle(make_idlers(make_attackers_stream(make_attackers_homing(make_attackers_spawning(make_chargers([]))))))",
+			upper_stalks: "[obj mushroom_boss] <- sort(stalks, a.y < b.y)[0:2] asserting size(stalks) >= 2",
+			an_upper_stalk: "obj mushroom_boss :: shuffle(upper_stalks)[0]",
+		
+			all_the_other_stalks: "def(obj mushroom_boss this_one) -> [obj mushroom_boss]  filter(stalks, value != this_one)",
+
 			
 			
-			pick_random_behavior: "[map(stalks, (obj mushroom_boss <- value).set_behavior( behavior_profile[index] ))/*,debug(behavior_profile)*/]",
+		#-------------------------- core behavior --------------------------#
+	process_behavior: "				[		
+										switch(_state,
+											enum spawn_acid_rain_glob,		process_aggro_mooks,
+											enum spore_cloud_setup,			null,
+											enum spore_cloud_emit,			null,
+											enum bomber_shroom_drop, 		null,
+											enum idle,						null
+										),
+										//debug(cycle - _phase_started_at, ' : ', _current_phase_random_timer)
+									]",
+													
+	pick_random_behavior: "commands :: [
+ 											switch(_behavior_mode_prng.get_next_value,
+ 												0, ;	begin_spawn_acid_rain_glob,
+ 												1, ;	begin_spore_cloud,
+ 												2, ;	begin_bomber_shroom_drop,
+ 											),
+											_behavior_mode_prng.iterate_random_pool,
+											; set(_phase_started_at, cycle)
+										]",
+										
+	pick_specific_behavior: "def( commands new_behavior ) -> commands	[
+																			; new_behavior,
+																			; set(_phase_started_at, cycle)
+																		]",
+			
+###-------------------------- attack pattern handling --------------------------###
 			
 			
-			hurt_velocity_y: 0,
-			hurt_velocity_x: 0,
+			
+#-------------------------- acid rain-glob attack --------------------------#
+	/*
+		In this mode, the boss spawns a glob of acid that floats horizontally, seeks a position over where the player is currently standing, bursts, and rains blobs of acid straight down
+	*/
+
+
+		begin_spawn_acid_rain_glob: "commands :: [
+									mb_debug('MODE: begin_spawn_acid_rain_glob'), 
+									set(_state, enum spawn_acid_rain_glob),
+									set(_current_phase_random_timer, 50 + (100 + 640) + (50 + 1d75) )
+									
+									an_upper_stalk.set_behavior('guard'),
+
+							]",
+		
+#-------------------------- spore-cloud attack --------------------------#
+	/*
+		In this mode, the boss fires a cloud of spores that make a whole quadrant of the map deadly.
+	*/
+
+
+		begin_spore_cloud: "commands :: [
+									mb_debug('MODE: begin_spore_cloud'), 
+									set(_state, enum spore_cloud_setup),
+									set(_current_phase_random_timer, 50 + (100 + 640) + (50 + 1d75) )
+
+							]",
+			
+#-------------------------- bomber-shroom-drop --------------------------#
+	/*
+		A bomb shroom, which the player can light on fire, drops from above onto the wooden scaffolding.  Lighting it on fire acts like lighting a fuse - it sets a timer upon which the shroom will explode, dealing lots of damage to the boss.
+	*/
+
+
+		begin_bomber_shroom_drop: "commands :: [
+									mb_debug('MODE: begin_spore_cloud'), 
+									set(_state, enum spore_cloud_setup),
+									set(_current_phase_random_timer, 50 + (100 + 640) + (50 + 1d75) )
+
+							]",
+			
+			
 		},
+
+		types: {
+			MushroomBossBehaviorModeTypes: "enum {
+				spawn_acid_rain_glob,
+				spore_cloud_setup,
+				spore_cloud_emit,
+				bomber_shroom_drop
+				idle,
+			}",
+		},
+
+
 		
 		animation: {
 			id: "normal",
